# dispatchbackend

./: .env.example  .gitignore  Cargo.toml  crontab_backup.txt  private_key.pem  public_key.pem  secret.txt  storage_test.txt  test_bytes.txt  test_large.txt  test_rate_limit.sh
migrations/: 001_initial_schema.sql  002_add_storage_tracking.sql
src/: app_state.rs  error_handlers.rs  main.rs  rate_limiter.rs
src/auth/: login.rs  mod.rs  public_key.rs  recovery.rs  recovery_phrase.rs  register.rs
src/handlers/: block.rs  files.rs  mod.rs  rate_limiter.rs  storage.rs  users.rs
src/middleware/: csrf.rs
src/models/: mod.rs
