[package]
name = "dispatch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "limit"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = { version = "0.8", features = ["getrandom"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
subtle = "2.5"
lazy_static = "1.4"
bip39 = "2.0"

