[package]
name = "dispatch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"  # Update to 0.7 for better compatibility
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
bip39 = "2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"  # Add base64 crate
